--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "echo 'No build step required' && exit 0"
   },
   "author": "",
   "license": "ISC",
